--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 * {
     font-family: 'Hind Siliguri', sans-serif !important;
 }
+
+
+/* 
+colors: 
+#b94a8f
+#653dae
+#13338b
+#3a3ca0
+#df8254
+#041962
+#0c2070
+#2c349c
+#2c3493
+*/
