--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@
     transition: all .3s ease;
 }
 
+::selection {
+    color: white;
+    background-color: #13338b;
+}
+
+.price {
+    font-family: 'Baloo Da 2', cursive;
+}
+
 
 /* 
 colors: 
