--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,9 +1,11 @@
 .login-container {
-    padding-top: 16rem;
+    padding-top: 7rem;
 }
 
-.submit-btn {
-    background-color: rgb(84, 104, 255);
+.submit-btn,
+.otp-submit-btn {
+    /* background-color: rgb(84, 104, 255); */
+    background-color: grey;
     border-radius: 15px;
     color: white;
     justify-content: center;
@@ -12,6 +14,10 @@
     cursor: pointer;
     width: 100%;
     opacity: 0.9;
+}
+
+.otp-submit-btn {
+    background-color: rgb(84, 104, 255);
 }
 
 
@@ -32,7 +38,7 @@
 
 @media screen and (max-width: 991px) {
     .login-container {
-        padding-top: 14rem;
+        padding-top: 8rem;
     }
     .login-container h1 {
         font-size: 20px !important;
