--- a/src/components/DemoClass/DemoClass.css
+++ b/src/components/DemoClass/DemoClass.css
@@ -1,7 +1,7 @@
-.demo-class-container {
+/* .demo-class-container {
     background-color: rgb(243, 245, 249);
     min-height: 100vh;
-}
+} */
 
 .form-input {
     width: 100%;
