--- a/src/components/Home/Hero.css
+++ b/src/components/Home/Hero.css
@@ -4,7 +4,7 @@
     /* background-size: auto; */
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .underline {
@@ -15,14 +15,14 @@
     font-size: 36px;
     line-height: 52px;
     font-weight: 600;
-    margin: 10rem 0 2rem 5rem;
+    /* margin: 10rem 0 0rem 0rem; */
 }
 
 .hero-text-sub {
     font-size: 24px;
     line-height: 38px;
     font-weight: 500;
-    margin: 0 0 2rem 5rem;
+    /* margin: 0 0 2rem 5rem; */
 }
 
 .hero-demo-btn {
@@ -52,12 +52,12 @@
     .hero-text {
         font-size: 32px;
         line-height: 38px;
-        margin: 9rem 0 2rem 5rem;
+        /* margin: 9rem 0 2rem 5rem; */
     }
     .hero-text-sub {
         font-size: 20px;
         line-height: 30px;
-        margin: 0 0 2rem 5rem;
+        /* margin: 0 0 2rem 5rem; */
     }
     .underline {
         width: 140px;
@@ -68,12 +68,12 @@
     .hero-text {
         font-size: 26px;
         line-height: 34px;
-        margin: 8rem 0 2rem 5rem;
+        /* margin: 8rem 0 2rem 5rem; */
     }
     .hero-text-sub {
         font-size: 20px;
         line-height: 30px;
-        margin: 0 0 2rem 5rem;
+        /* margin: 0 0 2rem 5rem; */
     }
     .underline {
         width: 115px;
@@ -84,12 +84,12 @@
     .hero-text {
         font-size: 22px;
         line-height: 30px;
-        margin: 6rem 0 2rem 5rem;
+        /* margin: 6rem 0 2rem 5rem; */
     }
     .hero-text-sub {
         font-size: 16px;
         line-height: 25px;
-        margin: 0 0 2rem 5rem;
+        /* margin: 0 0 2rem 5rem; */
     }
     .hero-demo-btn {
         width: 40%;
@@ -104,12 +104,12 @@
     .hero-text {
         font-size: 16px;
         line-height: 26px;
-        margin: 0rem 0 2rem 0;
+        /* margin: 0rem 0 2rem 0; */
     }
     .hero-text-sub {
         font-size: 15px;
         line-height: 25px;
-        margin: 0 0 2rem 0;
+        /* margin: 0 0 2rem 0; */
     }
     .hero-demo-btn {
         width: 50%;
