--- a/src/components/DemoClass/DemoClass.css
+++ b/src/components/DemoClass/DemoClass.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     border: 1px solid #b94a8f;
     padding: 10px;
-    margin: 5px;
+    margin: 5px 0;
 }
 
 .form-input:hover {
@@ -32,13 +32,38 @@ select:focus {
     margin: 5px;
 }
 
-.form-input-submit {
+.form-input-submit,
+.form-input-submit-2,
+.demo-otp-submit-btn {
     width: 100%;
     height: 50px;
     border-radius: 5px;
-    border: 1px solid #5468ff;
+    border: 1px solid rgba(84, 104, 255, 0);
     padding: 10px;
     margin: 5px;
-    background-color: #5468ff;
+    background-color: rgba(84, 104, 255, 1);
     color: #f8f9fa;
+}
+
+.demo-otp-submit-btn {
+    margin: 5px 0 5px 5px;
+}
+
+.form-input-submit-2 {
+    background-color: rgba(84, 104, 255, 0.7);
+    margin: 0;
+}
+
+.demo-submit-btn {
+    background-color: #c7434b;
+    border-radius: 5px;
+    color: white;
+    justify-content: center;
+    border: none;
+    cursor: pointer;
+    margin: 3px;
+    height: 3.2rem;
+    padding: 2px;
+    opacity: 0.9;
+    font-size: 14px;
 }
