--- a/src/components/DemoClass/RegisterFromDemoClass.css
+++ b/src/components/DemoClass/RegisterFromDemoClass.css
@@ -1,11 +1,6 @@
-/* .login-container {
-    padding-top: 7rem;
-} */
-
 .number-submit-btn,
 .otp-submit-btn,
 .password-submit-btn {
-    /* background-color: rgb(84, 104, 255); */
     background-color: grey;
     border-radius: 15px;
     color: white;
@@ -19,8 +14,7 @@
 
 .otp-submit-btn {
     /* width: 22%; */
-    margin: 16px 0 0 0;
-    /* margin-top: 3px; */
+    margin-top: 3px;
     max-height: 3.3rem;
 }
 
@@ -34,13 +28,6 @@
 .password-submit-btn {
     background-color: rgb(84, 104, 255);
 }
-
-
-/* .logo-container {
-    background-image: url(https://skillshikhun.com/wp-content/uploads/2022/01/cropped-cropped-main-Logo-png-e1643562825750.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-} */
 
 @media screen and (max-width: 1199px) {
     .login-container {
