--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -54,7 +54,7 @@
     background-color: rgb(72, 199, 116);
     color: #f8f9fa;
     font-size: 16px;
-    /* font-weight: 600; */
+    font-weight: 100;
     line-height: 20px;
     border-radius: 5px;
     padding: 10px;
