--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,3 +1,19 @@
-.dashboard-container {
-    overflow: hidden;
+.dashboard-content-card {
+    /* max-width: 300px; */
+    height: auto;
+    box-shadow: 0 5px 15px #c4c4c44d;
+    margin: 10px;
+}
+
+.content-card {
+    box-shadow: 0 5px 15px #c4c4c44d;
+    margin: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .dashboard-content-card {
+        max-width: 300px;
+        height: auto;
+        margin: 10px;
+    }
 }
