--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -30,7 +30,7 @@
 }
 
 .btn-demo {
-    background-color: transparent;
+    /* background-color: transparent; */
     /* background-color: #b94a8f; */
     /* color: #f8f9fa; */
     font-size: 16px;
