--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
     /* font-family: 'Hind Siliguri', sans-serif !important; */
-    font-family: 'Baloo Da 2', cursive;
+    /* font-family: 'Baloo Da 2', cursive; */
+    font-family: 'Anek Bangla', 'Baloo Da 2', cursive;
     transition: all .3s ease;
 }
 
