--- a/src/components/Dashboard/DNavbar/DNavbar.css
+++ b/src/components/Dashboard/DNavbar/DNavbar.css
@@ -14,6 +14,7 @@
     box-shadow: 0px 0px 0px 0px;
 }
 
-.accordion-body-item:hover {
+
+/* .accordion-body-item:hover {
     color: #b94a8f;
-}
+} */
