--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,11 +1,12 @@
-.dashboard::-webkit-scrollbar {
-    display: none !important;
+/* .dashboard::-webkit-scrollbar {
+    display: none;
 }
 
 .dashboard {
-    -ms-overflow-style: none !important;
-    scrollbar-width: none !important;
-}
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: scroll;
+} */
 
 .dashboard-content-card {
     /* max-width: 300px; */
