updated marketing message

--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -5,9 +5,10 @@
     line-height: 46px;
 }
 
-.course-alt-title {
+
+/* .course-alt-title {
     margin-top: 4.7rem;
-}
+} */
 
 .alt-title {
     font-size: 20px;
