--- a/src/components/Home/Hero/Hero.css
+++ b/src/components/Home/Hero/Hero.css
@@ -6,7 +6,11 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+}
+
+.btn-hero-call {
+    background-image: linear-gradient(to right, #a61e01, #e49402);
 }
 
 .underline {
@@ -14,14 +18,14 @@
 }
 
 .hero-text {
-    font-size: 24px;
+    font-size: 32px;
     line-height: 52px;
     font-weight: 600;
     /* margin: 10rem 0 0rem 0rem; */
 }
 
 .hero-text-sub {
-    font-size: 18px;
+    font-size: 24px;
     line-height: 38px;
     font-weight: 500;
     /* margin: 0 0 2rem 5rem; */
