--- a/src/components/Home/Hero/HeroSlider.css
+++ b/src/components/Home/Hero/HeroSlider.css
@@ -1,10 +1,10 @@
-.swiper-slide {
+/* .swiper-slide {
     height: 600px;
-}
+} */
 
 .swiper-button-next,
 .swiper-button-prev {
-    margin-top: 13rem !important;
+    margin-top: 5rem !important;
     background-color: #adabae;
     color: #000 !important;
     font-weight: bold !important;
@@ -18,9 +18,10 @@
     font-size: 16px !important;
 }
 
-.swiper-button-next {
+
+/* .swiper-button-next {
     right: 740px !important;
-}
+} */
 
 .swiper-pagination-bullet {
     background-color: #ececec !important;
@@ -32,15 +33,15 @@
     opacity: 1;
 }
 
-.swiper_image {
+
+/* .swiper_image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
-    /* padding: 100px; */
 }
 
 .swiper_image:hover {
     transform: scale(1.1);
     transition: all 0.5s ease;
-}
+} */
