--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -60,7 +60,7 @@
     font-weight: 600;
     line-height: 20px;
     border-radius: 5px;
-    padding: 10px;
+    padding: 6px 10px;
     margin: 1px;
     border: none;
     width: 97%;
